@startuml Mediatheque
class  Restaurant {
    int Restaurant_ID
    string nom
    int siret
    string adresse
    string mail 
    int nbEmployes
    string site_web 
}
class Employe{
    int Employe_ID
    string nom
    string prenom 
    string email 
    string adresse 
    int telephone
    string motDePasse
}
class Reservation{
    int Reservation_ID
    Date date_resa
    string heureDebut
    string heureFin
    string Nom 
    int Nb_couverts
    int numTable
}
class Table {
    int Id 
    string Etat 
    int Nb_couverts

}
class Service{
    Date Date
    string Heure
    List Table
    id Employe
    int Nb_Employes
}

Restaurant "1" <|----|> "*" Employe
Table "*" <|----|> "1" Restaurant
Employe "*" <|----|> "*" Table
Reservation "1" <|----|> "1" Table
Service "1" <|----|> "*" Table
Service "1" <|----|> "1" Employe
Service "*" <|----|> "1" Restaurant
@enduml